關於排版完成、開啟隱藏滾軸

--- a/01-About.html
+++ b/01-About.html
@@ -143,11 +143,11 @@
         <div class="parallax_window">
             <div class="effect_box lax "
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+550) 0,(document.querySelector('#apple_effect').offsetTop+1100) 1,(document.querySelector('#apple_effect').offsetTop+2100) 0,"
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+550) 3, (document.querySelector('#apple_effect').offsetTop+1100) 1,">
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+550) 3, (document.querySelector('#apple_effect').offsetTop+1100) 1,(document.querySelector('#apple_effect').offsetTop+1800) 1, (document.querySelector('#apple_effect').offsetTop+2100) 0,">
                 <div class="sec-02 sec ">
                     <div class="About ">
-                        <div class="about-title">關於十鼓</div>
-                        <div class="about-text">
+                        <div class="about-title-00">關於十鼓</div>
+                        <div class="about-text-00">
                             十鼓仁糖文創園區(仁德糖廠)前身為臺南車路墘糖廠為一處百年糖廠建築，一座親近文化藝術的新天地。園區佔地約7.5公頃，共有22座日治時代建築及自然生態空間，改成多樣空間規劃的文化場域，除了會議室、共同工作空間、駐村藝術創作外，也包括婚宴派對、表演場地、藝廊、劇場、製糖機器互動空間等，創造多元化主題體驗。
                         </div>
                     </div>
@@ -162,11 +162,11 @@
         <div class="parallax_window">
             <div class="effect_box lax"
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+2100) 0,(document.querySelector('#apple_effect').offsetTop+2650) 1,(document.querySelector('#apple_effect').offsetTop+3650) 0,"
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+2100) 3, (document.querySelector('#apple_effect').offsetTop+2650) 1,">
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+2100) 3, (document.querySelector('#apple_effect').offsetTop+2650) 1,(document.querySelector('#apple_effect').offsetTop+3350) 1, (document.querySelector('#apple_effect').offsetTop+3650) 0,">
                 <div class="sec-03 sec">
-                    <div class=" About">
-                        <div class="about-title">沿革</div>
-                        <div class="about-2-text">
+                    <div class="About">
+                        <div class="about-title-01">沿革</div>
+                        <div class="about-text-01">
                             <div class="text-wrap">
                                 本廠前身為「車路墘製糖所」，1909年由日資「臺灣製糖株式會社」創立，1910年開工生產。民國34年11月由國民政府資源委員會監理，並於次年接收。34/35年期製糖在資源委員會監理下，由原日人製糖會社人員完成。在太平洋戰爭期間，本廠雖未直接受到盟機轟炸，但間接影響設備失修及蔗作廢耕，製糖設備雖尚完整，但廠房等設備乃屬殘破不堪，尤其蔗園荒蕪、原料生產失調更為嚴重。民國35年5月1日「台灣糖業公司」成立，本廠隸屬「第二區分公司」管轄，民國39年7月本公司撤銷區分公司制，本廠劃歸「總爺總廠」督導。
                             </div>
@@ -185,12 +185,12 @@
         <div class="parallax_window">
             <div class="effect_box lax "
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+3650) 0,(document.querySelector('#apple_effect').offsetTop+4200) 1,(document.querySelector('#apple_effect').offsetTop+5200) 0,"
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+3650) 3, (document.querySelector('#apple_effect').offsetTop+4200) 1,">
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+3650) 3, (document.querySelector('#apple_effect').offsetTop+4200) 1,(document.querySelector('#apple_effect').offsetTop+4900) 1,(document.querySelector('#apple_effect').offsetTop+5200) 0,">
                 <div class="sec-04 sec ">
                     <div class="About-02">
                         <div class="about-title-02">發展年表</div>
-                        <div class="about-3-text">
-                            <div class="text-3-wrap">
+                        <div class="about-text-02">
+                            <div class="text-wrap-02">
                                 <div class="timeline">
                                     <div class="time-container right">
                                         <div class="time-content">
@@ -224,7 +224,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="text-3-wrap">
+                            <div class="text-wrap-02">
                                 <div class="timeline">
                                     <div class="time-container right">
                                         <div class="time-content">
@@ -258,11 +258,11 @@
         <div class="parallax_window">
             <div class="effect_box lax"
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+5200) 0,(document.querySelector('#apple_effect').offsetTop+5750) 1,(document.querySelector('#apple_effect').offsetTop+6750) 0,"
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+5200) 3, (document.querySelector('#apple_effect').offsetTop+5750) 1, ">
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+5200) 3, (document.querySelector('#apple_effect').offsetTop+5750) 1, (document.querySelector('#apple_effect').offsetTop+6450) 1, (document.querySelector('#apple_effect').offsetTop+6750) 0,">
                 <div class="sec-05 sec">
                     <div class=" About-03">
-                        <div class="about-title">核心價值</div>
-                        <div class="about-text">
+                        <div class="about-title-00">核心價值</div>
+                        <div class="about-text-00">
                             <div class="about-text-5-team">
                                 <i class="fas fa-circle color-gray"></i>
                                 <div class="about-text-5-text">傳創台灣本土擊樂，廣納世界文化</div>
@@ -285,7 +285,7 @@
         <div class="parallax_window">
             <div class="effect_box lax"
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+6750) 0, (document.querySelector('#apple_effect').offsetTop+7300) 1,(document.querySelector('#apple_effect').offsetTop+8300) 0, "
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+6750) 3, (document.querySelector('#apple_effect').offsetTop+7300) 1,">
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+6750) 3, (document.querySelector('#apple_effect').offsetTop+7300) 1, (document.querySelector('#apple_effect').offsetTop+8000) 1, (document.querySelector('#apple_effect').offsetTop+8300) 0,">
                 <div class="sec-06 sec">
                     <div class="About-06">
                         <div class="en-title">ABOUT <u
@@ -303,7 +303,7 @@
         <div class="parallax_window">
             <div class="effect_box lax"
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+8300) 0,(document.querySelector('#apple_effect').offsetTop+8850) 1,(document.querySelector('#apple_effect').offsetTop+9850) 0,"
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+8300) 3, (document.querySelector('#apple_effect').offsetTop+8850) 1, ">
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+8300) 3, (document.querySelector('#apple_effect').offsetTop+8850) 1, (document.querySelector('#apple_effect').offsetTop+9550) 1, (document.querySelector('#apple_effect').offsetTop+9850) 0,">
                 <div class="sec-07">
                     <img src="./img/插圖/雙人鼓-鼓樂饗宴背景用_工作區域 1.png" class="img-bac-01" alt="背景左">
                     <img src="./img/插圖/雙人鼓-鼓樂饗宴背景用_工作區域 1.png" class="img-bac-02" alt="背景右">
@@ -340,7 +340,7 @@
         <div class="parallax_window">
             <div class="effect_box lax"
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+9850) 0, (document.querySelector('#apple_effect').offsetTop+10400) 1,(document.querySelector('#apple_effect').offsetTop+11400) 0, "
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+9850) 3, (document.querySelector('#apple_effect').offsetTop+10400) 1,">
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+9850) 3, (document.querySelector('#apple_effect').offsetTop+10400) 1, (document.querySelector('#apple_effect').offsetTop+11100) 1, (document.querySelector('#apple_effect').offsetTop+11400) 0,">
                 <div class="sec-08 sec">
                     <div class="title-08">
                         <i class="fas fa-circle"></i>
@@ -374,7 +374,7 @@
         <div class="parallax_window">
             <div class="effect_box lax"
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+11400) 0, (document.querySelector('#apple_effect').offsetTop+11950) 1,(document.querySelector('#apple_effect').offsetTop+12950) 0, "
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+11400) 3, (document.querySelector('#apple_effect').offsetTop+11950) 1,">
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+11400) 3, (document.querySelector('#apple_effect').offsetTop+11950) 1, (document.querySelector('#apple_effect').offsetTop+12650) 1, (document.querySelector('#apple_effect').offsetTop+12950) 0,">
                 <div class="sec-09 sec">
                     <div class="title-08">
                         <i class="fas fa-circle"></i>
@@ -413,15 +413,17 @@
                                 <div class="overlay">
                                     <div class="img-09-text">鼓追燒</div>
                                 </div>
-                            </div><div class="img-09">
-                                <img src="./img/關於頁面/特色/58.jpg.pagespeed.ce.fQXR-UfwWI.jpg" alt="十鼓套餐" class="img-09-01">
+                            </div>
+                            <div class="img-09">
+                                <img src="./img/關於頁面/特色/58.jpg.pagespeed.ce.fQXR-UfwWI.jpg" alt="十鼓套餐"
+                                    class="img-09-01">
                                 <div class="overlay">
                                     <div class="img-09-text">十鼓套餐</div>
                                 </div>
                             </div>
                             <div class="img-09-team">
-                                <img src="./img/關於頁面/特色/打鼓餅.jpg" class="img-09-01" alt="">
-                                <img src="./img/關於頁面/特色/打鼓餅.jpg" class="img-09-01" alt="">
+                                <img src="./img/關於頁面/特色/打鼓餅.jpg" class="img-09-01" alt="下午茶">
+                                <img src="./img/關於頁面/特色/打鼓餅.jpg" class="img-09-01" alt="微量調酒">
                             </div>
 
 
@@ -437,28 +439,28 @@
         <!-- 文創空間 -->
         <div class="parallax_window">
             <div class="effect_box lax"
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+12950) 0, (document.querySelector('#apple_effect').offsetTop+13500) 1,(document.querySelector('#apple_effect').offsetTop+14500) 0, "
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+12950) 3, (document.querySelector('#apple_effect').offsetTop+13500) 1,">
-                <div class="sec-08 sec">
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+12950) 0, (document.querySelector('#apple_effect').offsetTop+13500) 1, "
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+12950) 3, (document.querySelector('#apple_effect').offsetTop+13500) 1, (document.querySelector('#apple_effect').offsetTop+14000) 1,">
+                <div class="sec-10 sec">
                     <div class="title-08">
                         <i class="fas fa-circle"></i>
                         <div class="sec-08-line">
-                            <div class="sec-08-title">極限體驗</div>
+                            <div class="sec-08-title">文創空間</div>
                         </div><i class="fas fa-circle"></i>
                     </div>
-                    <div class="sec-08-context">
-                        <div class="img-group">
-                            <img src="./img/主頁背景/關於-極限體驗.jpg" class="sec-08-img" alt="">
-
-                        </div>
-                        <div class="sec-08-textbox">
-                            <h3 class="sec-08-subtitle">十鼓仁糖文創園區
-                            </h3>
-                            <div class="sec-08-text">
-                                是日治時代老糖廠改建而成的藝術文化村，園區內有刺激的煙囪溜滑梯、飛天宅急便，還可以欣賞夢糖劇場鼓樂表演，就像來到「大人版的遊樂園」！十鼓仁糖文創園區鄰近奇美博物館，推薦大家可以安排順遊兩個台南景點的行程！
-                            </div>
-                            <a href="./03-Facility.html" class="sec-08-more">more</a>
-                        </div>
+                    <div class="sec-10-container">
+                        <img src="https://images.chinatimes.com/newsphoto/2016-07-06/900/B30A00_P_02_02.jpg"
+                            class="sec10-img" alt="台版天空之城">
+                        <img src="https://tendrum.com.tw/userfiles/images/%E5%A4%A2%E7%B3%96%E5%8A%87%E5%A0%B4.JPG"
+                            class="sec10-img" alt="夢糖劇場">
+                        <img src="https://4.bp.blogspot.com/-Yt2ya6JDw4Q/WIlwI0FiLTI/AAAAAAAAAZc/vG2BKWcjW2w9bR5DTqLFhk_-TU7pCy1AACPcB/s640/DSC01273%25E5%2584%25AA.JPG"
+                            class="sec10-img" alt="齒輪舞台">
+                        <img src="https://scontent.frmq2-1.fna.fbcdn.net/v/t1.0-9/53698446_2035164049870931_960115960218386432_o.jpg?_nc_cat=110&_nc_sid=730e14&_nc_ohc=vJxT8UzrJg4AX_SFcHb&_nc_ht=scontent.frmq2-1.fna&oh=767f344476aa44d42fd7f8462820bf5d&oe=5FA8E661"
+                            class="sec10-img" alt="永不出軌">
+                        <img src="https://scontent.frmq2-1.fna.fbcdn.net/v/t1.0-9/1546149_245354755641215_1890074086_n.jpg?_nc_cat=106&_nc_sid=cdbe9c&_nc_ohc=6YnhIBLqRngAX8CZvku&_nc_ht=scontent.frmq2-1.fna&oh=20902ed9058fbb40d048a22bdc7c70cd&oe=5FA7E82F"
+                            class="sec10-img" alt="制鼓廠">
+                        <img src="https://scontent.frmq2-2.fna.fbcdn.net/v/t31.0-8/13568759_627617080748312_8856479280367360089_o.jpg?_nc_cat=101&_nc_sid=730e14&_nc_ohc=jBo7ZywhPagAX9LedrG&_nc_ht=scontent.frmq2-2.fna&oh=a144b38bcbb6e3bc5e234569930a6d8e&oe=5FA685A2"
+                            class="sec10-img" alt="天空步道">
 
                     </div>
                     <div class="footer">版權聲明</div>
