場地租借調色

--- a/03-Facility.html
+++ b/03-Facility.html
@@ -98,31 +98,7 @@
                 <div class="image-circle">
                     <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
                 </div>
-                <div class="img-name floater">煙囪滑梯</div>
-            </div>
-            <div class="img-team">
-                <div class="image-circle">
-                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
-                </div>
-                <div class="img-name wiggle">天空上的鞦韆</div>
-            </div>
-            <div class="img-team">
-                <div class="image-circle">
-                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
-                </div>
                 <div class="img-name floater">飛天宅急便</div>
-            </div>
-            <div class="img-team">
-                <div class="image-circle">
-                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
-                </div>
-                <div class="img-name floater">蜘蛛人</div>
-            </div>
-            <div class="img-team">
-                <div class="image-circle">
-                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
-                </div>
-                <div class="img-name floater">糖晶落體</div>
             </div>
             <div class="img-team">
                 <div class="image-circle">
@@ -130,8 +106,46 @@
                 </div>
                 <div class="img-name floater">鋼鐵鐳戰</div>
             </div>
-        </div>
+            <div class="img-team">
+                <div class="image-circle">
+                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
+                </div>
+                <div class="img-name floater">蜘蛛人</div>
+            </div>
 
+            <div class="img-teams">
+                <div class="img-team">
+                    <div class="image-circle">
+                        <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
+                    </div>
+                    <div class="img-name floater">天空上的鞦韆</div>
+                </div>
+
+                <div class="overlay bacimg-04">
+                    <div class="text-box">
+                        <br>天空上的鞦韆
+                        <br>是十鼓仁糖文創園區於2019年推出的高空刺激設施，要來到這裡必須先上到32公尺約11層樓高的「天堂路」，搭乘上天堂上的鞦韆，最多可以三人同時搭乘。享受高空擺盪，並能一覽台南仁德一帶的美景，在傍晚時分搭乘更是浪漫與刺激兼具，讓人腎上腺素飆升。
+                        <br>
+                        <br>
+                        <br>設施資訊：50元 / 次
+                        <br>開放時間：下午13:10~16:50、夜間 18:10~20:40
+                    </div>
+                </div>
+            </div>
+            <div class="img-team">
+                <div class="image-circle">
+                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
+                </div>
+                <div class="img-name floater">煙囪滑梯</div>
+            </div>
+            <div class="img-team">
+                <div class="image-circle">
+                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
+                </div>
+                <div class="img-name floater">糖晶落體</div>
+            </div>
+
+        </div>
 
     </div>
     <footer>版權聲明</footer>
