--- a/06-Rented.html
+++ b/06-Rented.html
@@ -88,12 +88,12 @@
     <div class="Rented">
         <div class="button-bar">
             <div class="button-g">
-                <div class="tittle">場地出租</div>
+                <h1 class="rented-tittle">場地出租</h1>
                 <!-- 標題 -->
                 <div class="lease-box">
                     <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                        <h2>租借要點</h2>
+                    <button type="button" class="btn " data-toggle="modal" data-target="#exampleModal">
+                        <h2 class="btnn btnn--stripe btnn--radius">租借要點</h2>
                     </button>
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
@@ -137,10 +137,37 @@
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src=" " alt="">十鼓會議廳</div>
-                        <div class="swiper-slide">永不出軌</div>
-                        <div class="swiper-slide">齒輪舞台</div>
-                        <div class="swiper-slide">水槽劇場</div>
+                            <img src="./img/場地租借/石鼓會議廳-2.jpg " class="rented-img" alt="">
+                            <div class="text-center">
+                                <p>十鼓會議廳</p>
+                                <p>250-60人</p>
+                                <p>多功能活動場地</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./img/場地租借/永不出軌宴會廳-1.jpg" alt="" class="rented-img">
+                            <div class="text-center">
+                                <p>永不出軌</p>
+                                <p>400人</p>
+                                <p>婚宴、餐飲、活動場地</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./img/場地租借/齒輪舞台-3.jpg" class="rented-img" alt="">
+                            <div class="text-center">
+                                <p>齒輪舞台</p>
+                                <p>1000-1100人</p>
+                                <p>大地、團康、表演</p>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./img/場地租借/水槽劇場-4.jpg" class="rented-img" alt="">
+                            <div class="text-center">
+                                <p>水槽劇場</p>
+                                <p>2000人</p>
+                                <p>多功能活動場地</p>
+                            </div>
+                        </div>
                     </div>
                     <!-- Add Pagination -->
                     <div class="swiper-pagination"></div>
