關於後兩頁變動

--- a/01-About.html
+++ b/01-About.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./CSS/wickedcss.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <!-- aos -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- aos -->
     <!-- Icon -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -151,7 +154,6 @@
                             十鼓仁糖文創園區(仁德糖廠)前身為臺南車路墘糖廠為一處百年糖廠建築，一座親近文化藝術的新天地。園區佔地約7.5公頃，共有22座日治時代建築及自然生態空間，改成多樣空間規劃的文化場域，除了會議室、共同工作空間、駐村藝術創作外，也包括婚宴派對、表演場地、藝廊、劇場、製糖機器互動空間等，創造多元化主題體驗。
                         </div>
                     </div>
-                    <div class="footer">版權聲明</div>
                 </div>
 
             </div>
@@ -175,7 +177,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="footer">版權聲明</div>
                 </div>
             </div>
         </div>
@@ -248,7 +249,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="footer">版權聲明</div>
                 </div>
             </div>
         </div>
@@ -275,7 +275,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="footer">版權聲明</div>
                 </div>
             </div>
         </div>
@@ -330,7 +329,6 @@
                         <a href="./04-Drum.html" class="sec-07-more">more</a>
                     </div>
                 </div>
-                <div class="footer">版權聲明</div>
             </div>
         </div>
 
@@ -339,8 +337,8 @@
         <!-- 極限體驗 -->
         <div class="parallax_window">
             <div class="effect_box lax"
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+9850) 0, (document.querySelector('#apple_effect').offsetTop+10400) 1,(document.querySelector('#apple_effect').offsetTop+11400) 0, "
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+9850) 3, (document.querySelector('#apple_effect').offsetTop+10400) 1, (document.querySelector('#apple_effect').offsetTop+11100) 1, (document.querySelector('#apple_effect').offsetTop+11400) 0,">
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+9850) 0, (document.querySelector('#apple_effect').offsetTop+10400) 1,"
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+9850) 3, (document.querySelector('#apple_effect').offsetTop+10400) 1, (document.querySelector('#apple_effect').offsetTop+11000) 1,">
                 <div class="sec-08 sec">
                     <div class="title-08">
                         <i class="fas fa-circle"></i>
@@ -361,117 +359,97 @@
                             </div>
                             <a href="./03-Facility.html" class="sec-08-more">more</a>
                         </div>
-
                     </div>
-                    <div class="footer">版權聲明</div>
-
                 </div>
             </div>
         </div>
         <!-- 極限體驗 -->
-
-        <!-- 特色餐飲 -->
-        <div class="parallax_window">
-            <div class="effect_box lax"
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+11400) 0, (document.querySelector('#apple_effect').offsetTop+11950) 1,(document.querySelector('#apple_effect').offsetTop+12950) 0, "
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+11400) 3, (document.querySelector('#apple_effect').offsetTop+11950) 1, (document.querySelector('#apple_effect').offsetTop+12650) 1, (document.querySelector('#apple_effect').offsetTop+12950) 0,">
-                <div class="sec-09 sec">
-                    <div class="title-08">
-                        <i class="fas fa-circle"></i>
-                        <div class="sec-08-line">
-                            <div class="sec-08-title">特色餐飲</div>
-                        </div><i class="fas fa-circle"></i>
+    </div>
+    <!-- 特色餐飲 -->
+    <div class="sec-09 sec" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+        <div class="title-09">
+            <i class="fas fa-circle"></i>
+            <div class="sec-09-line">
+                <div class="sec-09-title">特色餐飲</div>
+            </div><i class="fas fa-circle"></i>
+        </div>
+        <div class="sec-09-context">
+            <div class="img-group-09">
+                <div class="img-09">
+                    <img src="./img/關於頁面/特色/cookies.jpg" alt="cookies" class="img-09-01">
+                    <div class="overlay">
+                        <div class="img-09-text">打鼓餅</div>
                     </div>
-                    <div class="sec-09-context">
-                        <div class="img-group-09">
-                            <div class="img-09">
-                                <img src="./img/關於頁面/特色/cookies.jpg" alt="cookies" class="img-09-01">
-                                <div class="overlay">
-                                    <div class="img-09-text">打鼓餅</div>
-                                </div>
-                            </div>
-                            <div class="img-09">
-                                <img src="./img/關於頁面/特色/egg.jpg" alt="cookies" class="img-09-01">
-                                <div class="overlay">
-                                    <div class="img-09-text">鼓找蛋</div>
-                                </div>
-                            </div>
-                            <div class="img-09">
-                                <img src="./img/關於頁面/特色/noodles-set.jpg" alt="cookies" class="img-09-01">
-                                <div class="overlay">
-                                    <div class="img-09-text">麵線套餐</div>
-                                </div>
-                            </div>
-                            <div class="img-09">
-                                <img src="./img/關於頁面/特色/sugar-juice_工作區域 1.png" alt="cookies" class="img-09-01">
-                                <div class="overlay">
-                                    <div class="img-09-text">甘蔗汁</div>
-                                </div>
-                            </div>
-                            <div class="img-09">
-                                <img src="./img/關於頁面/特色/1005hk114zq7ctzi8D1BF.webp" alt="鼓追燒" class="img-09-01">
-                                <div class="overlay">
-                                    <div class="img-09-text">鼓追燒</div>
-                                </div>
-                            </div>
-                            <div class="img-09">
-                                <img src="./img/關於頁面/特色/58.jpg.pagespeed.ce.fQXR-UfwWI.jpg" alt="十鼓套餐"
-                                    class="img-09-01">
-                                <div class="overlay">
-                                    <div class="img-09-text">十鼓套餐</div>
-                                </div>
-                            </div>
-                            <div class="img-09-team">
-                                <img src="./img/關於頁面/特色/打鼓餅.jpg" class="img-09-01" alt="下午茶">
-                                <img src="./img/關於頁面/特色/打鼓餅.jpg" class="img-09-01" alt="微量調酒">
-                            </div>
-
-
-                        </div>
-                    </div>
-                    <div class="footer">版權聲明</div>
-
                 </div>
+                <div class="img-09">
+                    <img src="./img/關於頁面/特色/egg.jpg" alt="cookies" class="img-09-01">
+                    <div class="overlay">
+                        <div class="img-09-text">鼓找蛋</div>
+                    </div>
+                </div>
+                <div class="img-09">
+                    <img src="./img/關於頁面/特色/noodles-set.jpg" alt="cookies" class="img-09-01">
+                    <div class="overlay">
+                        <div class="img-09-text">麵線套餐</div>
+                    </div>
+                </div>
+                <div class="img-09">
+                    <img src="./img/關於頁面/特色/sugar-juice_工作區域 1.png" alt="cookies" class="img-09-01">
+                    <div class="overlay">
+                        <div class="img-09-text">甘蔗汁</div>
+                    </div>
+                </div>
+                <div class="img-09">
+                    <img src="./img/關於頁面/特色/1005hk114zq7ctzi8D1BF.webp" alt="鼓追燒" class="img-09-01">
+                    <div class="overlay">
+                        <div class="img-09-text">鼓追燒</div>
+                    </div>
+                </div>
+                <div class="img-09">
+                    <img src="./img/關於頁面/特色/58.jpg.pagespeed.ce.fQXR-UfwWI.jpg" alt="十鼓套餐" class="img-09-01">
+                    <div class="overlay">
+                        <div class="img-09-text">十鼓套餐</div>
+                    </div>
+                </div>
+                <div class="img-09-team">
+                    <img src="./img/關於頁面/特色/打鼓餅.jpg" class="img-09-01" alt="下午茶">
+                    <img src="./img/關於頁面/特色/打鼓餅.jpg" class="img-09-01" alt="微量調酒">
+                </div>
+
+
             </div>
         </div>
-        <!-- 特色餐飲 -->
+    </div>
+    <!-- 特色餐飲 -->
 
-        <!-- 文創空間 -->
-        <div class="parallax_window">
-            <div class="effect_box lax"
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+12950) 0, (document.querySelector('#apple_effect').offsetTop+13500) 1, "
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+12950) 3, (document.querySelector('#apple_effect').offsetTop+13500) 1, (document.querySelector('#apple_effect').offsetTop+14000) 1,">
-                <div class="sec-10 sec">
-                    <div class="title-08">
-                        <i class="fas fa-circle"></i>
-                        <div class="sec-08-line">
-                            <div class="sec-08-title">文創空間</div>
-                        </div><i class="fas fa-circle"></i>
-                    </div>
-                    <div class="sec-10-container">
-                        <img src="https://images.chinatimes.com/newsphoto/2016-07-06/900/B30A00_P_02_02.jpg"
-                            class="sec10-img" alt="台版天空之城">
-                        <img src="https://tendrum.com.tw/userfiles/images/%E5%A4%A2%E7%B3%96%E5%8A%87%E5%A0%B4.JPG"
-                            class="sec10-img" alt="夢糖劇場">
-                        <img src="https://4.bp.blogspot.com/-Yt2ya6JDw4Q/WIlwI0FiLTI/AAAAAAAAAZc/vG2BKWcjW2w9bR5DTqLFhk_-TU7pCy1AACPcB/s640/DSC01273%25E5%2584%25AA.JPG"
-                            class="sec10-img" alt="齒輪舞台">
-                        <img src="https://scontent.frmq2-1.fna.fbcdn.net/v/t1.0-9/53698446_2035164049870931_960115960218386432_o.jpg?_nc_cat=110&_nc_sid=730e14&_nc_ohc=vJxT8UzrJg4AX_SFcHb&_nc_ht=scontent.frmq2-1.fna&oh=767f344476aa44d42fd7f8462820bf5d&oe=5FA8E661"
-                            class="sec10-img" alt="永不出軌">
-                        <img src="https://scontent.frmq2-1.fna.fbcdn.net/v/t1.0-9/1546149_245354755641215_1890074086_n.jpg?_nc_cat=106&_nc_sid=cdbe9c&_nc_ohc=6YnhIBLqRngAX8CZvku&_nc_ht=scontent.frmq2-1.fna&oh=20902ed9058fbb40d048a22bdc7c70cd&oe=5FA7E82F"
-                            class="sec10-img" alt="制鼓廠">
-                        <img src="https://scontent.frmq2-2.fna.fbcdn.net/v/t31.0-8/13568759_627617080748312_8856479280367360089_o.jpg?_nc_cat=101&_nc_sid=730e14&_nc_ohc=jBo7ZywhPagAX9LedrG&_nc_ht=scontent.frmq2-2.fna&oh=a144b38bcbb6e3bc5e234569930a6d8e&oe=5FA685A2"
-                            class="sec10-img" alt="天空步道">
-
-                    </div>
-                    <div class="footer">版權聲明</div>
-
-                </div>
-            </div>
+    <!-- 文創空間 -->
+    <div class="sec-10 sec" data-aos="fade-up"
+    data-aos-anchor-placement="center-bottom">
+        <div class="title-10">
+            <i class="fas fa-circle"></i>
+            <div class="sec-10-line">
+                <div class="sec-10-title">文創空間</div>
+            </div><i class="fas fa-circle"></i>
         </div>
-        <!-- 文創空間 -->
+        <div class="sec-10-container">
+            <img src="https://images.chinatimes.com/newsphoto/2016-07-06/900/B30A00_P_02_02.jpg" class="sec10-img"
+                alt="台版天空之城">
+            <img src="https://tendrum.com.tw/userfiles/images/%E5%A4%A2%E7%B3%96%E5%8A%87%E5%A0%B4.JPG"
+                class="sec10-img" alt="夢糖劇場">
+            <img src="https://4.bp.blogspot.com/-Yt2ya6JDw4Q/WIlwI0FiLTI/AAAAAAAAAZc/vG2BKWcjW2w9bR5DTqLFhk_-TU7pCy1AACPcB/s640/DSC01273%25E5%2584%25AA.JPG"
+                class="sec10-img" alt="齒輪舞台">
+            <img src="https://scontent.frmq2-1.fna.fbcdn.net/v/t1.0-9/53698446_2035164049870931_960115960218386432_o.jpg?_nc_cat=110&_nc_sid=730e14&_nc_ohc=vJxT8UzrJg4AX_SFcHb&_nc_ht=scontent.frmq2-1.fna&oh=767f344476aa44d42fd7f8462820bf5d&oe=5FA8E661"
+                class="sec10-img" alt="永不出軌">
+            <img src="https://scontent.frmq2-1.fna.fbcdn.net/v/t1.0-9/1546149_245354755641215_1890074086_n.jpg?_nc_cat=106&_nc_sid=cdbe9c&_nc_ohc=6YnhIBLqRngAX8CZvku&_nc_ht=scontent.frmq2-1.fna&oh=20902ed9058fbb40d048a22bdc7c70cd&oe=5FA7E82F"
+                class="sec10-img" alt="制鼓廠">
+            <img src="https://scontent.frmq2-2.fna.fbcdn.net/v/t31.0-8/13568759_627617080748312_8856479280367360089_o.jpg?_nc_cat=101&_nc_sid=730e14&_nc_ohc=jBo7ZywhPagAX9LedrG&_nc_ht=scontent.frmq2-2.fna&oh=a144b38bcbb6e3bc5e234569930a6d8e&oe=5FA685A2"
+                class="sec10-img" alt="天空步道">
+
+        </div>
+        <div class="footer">版權聲明</div>
 
     </div>
-
+    <!-- 文創空間 -->
 
 
 
@@ -481,6 +459,10 @@
     <!-- 偽蘋果官網 -->
     <script src="https://cdn.jsdelivr.net/npm/lax.js"></script>
     <!-- 偽蘋果官網 -->
+    <!-- aos -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- aos -->
+
     <script>
         ////漢堡條///
         const hamburger = document.querySelector('.hamburger')
@@ -531,6 +513,9 @@
             window.requestAnimationFrame(updateLax)
         }
         console.log(document.querySelector('#apple_effect').offsetTop);
+
+
+        AOS.init();
     </script>
 </body>
 
